2002-12-28  Seth Nickell  <snickell@stanford.edu>

	* gnome-theme-manager.c: (update_themes_from_disk):

	Fix crash when current WM isn't detected.

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

Fri Dec  6 16:54:14 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-save-data.c: New file.  Really saves now.  Doesn't
	notice when a new metatheme is added, though.

Tue Dec  3 20:45:17 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-save.c: Add saving support.  Almost to a working
	point w/ this capplet...

Tue Dec  3 14:26:05 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-theme-details.c (window_theme_selection_changed): Fix
	g_assert_not_reached() that can be reached.

Tue Dec  3 00:40:13 2002  Jonathan Blandford  <jrb@gnome.org>

	* .cvsignore: shut up, CVS

	* Makefile.am: build new objects

	* gnome-theme-details.[ch]: New file to encapsulate the details
	dialog.

	* gnome-theme-manager.c: Restructure code.  Less love, more work.
	Prolly an improvement.

2002-11-23  Jody Goldberg <jody@gnome.org>

	* Release 2.1.3

Sat Nov 16 00:55:58 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (meta_theme_selection_changed): actually
	set the theme.

Thu Nov 14 19:30:02 2002  Jonathan Blandford  <jrb@gnome.org>

	* theme-thumbnail.c (setup_theme_thumbnail_factory): add G_IO_HUP
	so the child can actually exit when the parent does.

Thu Nov 14 17:14:00 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c: Use new theme system.  Handle other
	themes better.

	* theme-thumbnail.c: new file to draw themes.  Currently
	synchronous -- needs to be made async.

Thu Nov  7 15:24:33 2002  Jonathan Blandford  <jrb@gnome.org>

	* gtk-theme-selector.desktop.in (Exec): change binary name.

Tue Nov  5 15:48:20 2002  Jonathan Blandford  <jrb@gnome.org>

	* gnome-theme-manager.c (read_themes): make more robust.

2002-11-02  Jody Goldberg <jody@gnome.org>

	* Release 2.1.2

2002-11-02  Jody Goldberg <jody@gnome.org>
